--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="bg-neutral-900">
-    <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
+    <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto h-screen lg:py-0">
         <a class="flex items-center mb-6 text-2xl font-semibold text-white" href="#">
             <img alt="logo" class="w-14 h-14 mr-2" src="{{ url_for('static',filename='assets/logo_transparent.png') }}">
             MacroHQ
@@ -19,7 +19,7 @@
                 <h1 class="text-xl font-bold leading-tight tracking-tight md:text-2xl text-white">
                     Create an account
                 </h1>
-                <form action="#" class="space-y-4 md:space-y-6">
+                <form id="signup-form" class="space-y-4 md:space-y-6">
                     <div>
                         <label class="block mb-2 text-sm font-medium text-white" for="email">Your
                             email</label>
@@ -42,18 +42,20 @@
                                required=""
                                type="password">
                     </div>
+                    <p id="error-message" class="text-red-700 hidden"></p>
                     <button class="w-full text-white focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center bg-yellow-600 hover:bg-yellow-700 focus:ring-yellow-800"
                             type="submit">
                         Sign up
                     </button>
                     <p class="text-sm font-light text-gray-400">
                         Already have an account?
-                        <a class="font-medium hover:underline text-yellow-500" href="./signin.html">Sign in</a>
+                        <a class="font-medium hover:underline text-yellow-500" href="./signin">Sign in</a>
                     </p>
                 </form>
             </div>
         </div>
     </div>
 </div>
+<script src="{{ url_for('static',filename='js/scripts.js') }}"></script>
 </body>
 </html>
