--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="MacroHQ" property="og:title">
     <meta content="We make high quality macros" property="og:description">
-    <meta content="https://macro-hq.github.io/Website/" property="og:url">
-    <meta content="https://macro-hq.github.io/Website/assets/banner.png" property="og:image">
+    <meta content="https://macrohq.dev" property="og:url">
+    <meta content="{{ url_for('static',filename='assets/banner.png') }}" property="og:image">
     <meta name="twitter:card" content="summary_large_image">
     <meta content="#f8cc1e" data-react-helmet="true" name="theme-color">
     <link href="{{ url_for('static',filename='css/style.css') }}" rel="stylesheet">
