--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
     <p class="text-7xl">MacroHQ</p>
     <p class="text-2xl">We make macros.</p>
     <div class="pt-2">
-        <button class="border-white text-xl border-2 rounded-xl hover:bg-white hover:text-black pl-2 pr-2">MacroHub</button>
+        <button onclick="location.href = '/macrohub';" class="border-white text-xl border-2 rounded-xl hover:bg-white hover:text-black pl-2 pr-2">MacroHub</button>
         <button onclick="location.href = 'https://discord.gg/vBP8R6JK8Z';" class="border-white text-xl border-2 rounded-xl hover:bg-white hover:text-black pl-2 pr-2">Discord</button>
     </div>
 </div>
