--- a/templates/macrohub.html
+++ b/templates/macrohub.html
@@ -32,6 +32,17 @@
             </div>
             <button class="w-full mt-1 bg-yellow-500 rounded-2xl border-neutral-500 border-[1px]">14,99€</button>
         </div>
+        <div class="bg-neutral-600 hover:scale-105 transform transition-transform border-2 border-neutral-500 rounded-2xl mx-2 mt-2">
+            <div class="grid grid-cols-4">
+                <img class="col-span-1" src="{{ url_for('static',filename='assets/swiftslayer.png') }}" width="100" height="100" alt="SwiftSlayer">
+                <div class="col-span-3">
+                    <h1 class="text-xl">SwiftSlayer</h1>
+                    <p class="">Hypixel Skyblock Slayer Macro</p>
+                    <a class="text-yellow-500">More information</a>
+                </div>
+            </div>
+            <button class="w-full mt-1 bg-yellow-500 rounded-2xl border-neutral-500 border-[1px]">14,99€</button>
+        </div>
     </div>
 </div>
 </body>
