--- a/templates/resetpassword.html
+++ b/templates/resetpassword.html
@@ -1,13 +1,10 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link href="{{ url_for('static',filename='css/style.css') }}" rel="stylesheet">
-    <title>Reset password</title>
-    <link href="{{ url_for('static',filename='assets/logo_transparent.png') }}" rel="icon" type="image/x-icon">
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %} Reset password {% endblock %}
+
+{% block header %} {% endblock %}
+
+{% block content %}
 <div class="bg-neutral-900">
     <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
         <a class="flex items-center mb-6 text-2xl font-semibold text-white" href="#">
@@ -43,5 +40,4 @@
         </div>
     </div>
 </div>
-</body>
-</html>
+{% endblock %}
